examples/kju/positive/variables/unit_function_result_assigned_to_unit_variable.kju
fun f():Unit{
}

fun kju():Unit{
	var x:Unit=f();
}