examples/kju/negative/structs/incorrect_type_new.kju
struct A
{
}

struct B
{
}

fun kju() : Unit
{
    var x : A = new (B);
}